<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/poupanca" />

        <RadioButton
            android:id="@+id/rbEspecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/especial" />
    </RadioGroup>

    <EditText
        android:id="@+id/etCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/cliente"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/conta"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etCliente"
        app:layout_constraintTop_toBottomOf="@+id/etCliente" />

    <EditText
        android:id="@+id/etSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/saldo"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etRelativo"
        app:layout_constraintTop_toBottomOf="@+id/etConta" />

    <EditText
        android:id="@+id/etRelativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/rendimento"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/rbDepositar"
        app:layout_constraintStart_toStartOf="@+id/rbDepositar"
        app:layout_constraintTop_toBottomOf="@+id/etSaldo" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </RadioGroup>

    <RadioButton
        android:id="@+id/rbSacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:text="@string/saque"
        app:layout_constraintEnd_toStartOf="@+id/rbDepositar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRelativo" />

    <RadioButton
        android:id="@+id/rbDepositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:text="@string/deposito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rbSacar"
        app:layout_constraintTop_toBottomOf="@+id/etRelativo" />

    <Button
        android:id="@+id/btnExecutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/operacao"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etRelativo"
        app:layout_constraintTop_toBottomOf="@+id/rbDepositar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="@+id/btnExecutar"
        app:layout_constraintTop_toBottomOf="@+id/btnExecutar" />
</androidx.constraintlayout.widget.ConstraintLayout>